# zentric_project

./: .gitignore  Dockerfile  README.md  db.sqlite3  django-deployment.yaml  django-secret.yaml  docker-compose.yml  envExample  manage.py  postgres-service.yaml  postgresql-deployment.yaml  postgresql-secret.yaml  pyproject.toml  settings.py
data_access/: apps.py
data_access/application/: views.py
data_access/infrastructure/: schema.py
inventories/: admin.py  inventory_factory.py  urls.py
inventories/application/: serializers.py  views.py
inventories/domain/: inventory_service.py
inventories/infrastructure/: inventory_repository.py  models.py
inventories/migrations/: 0001_initial.py  0002_alter_inventorytransaction_transaction_type.py  0003_alter_inventorytransaction_product.py
inventories/tests/: test_models.py  test_serializers.py  test_views.py
notifications/: abstract_factory.py  admin.py  notification_factory.py  urls.py  utils.py
notifications/application/: serializers.py  views.py
notifications/domain/: abstract_sns_service.py  notification_service.py
notifications/infrastructure/: models.py  notification_repository.py  notification_repository_interfaces.py  sns_repository_adapter.py  sns_repository_interfaces.py
notifications/migrations/: 0001_initial.py  (+1 more)
products/: abstract_factory.py  admin.py  models.py  product_factory.py  serializers.py  urls.py  views.py
shareds/: abstract_factory.py  abstract_sns_factory.py  sns_factory.py
tickets/: admin.py  ticket_factory.py  urls.py
zentric_project/: asgi.py  settings.py  urls.py  wsgi.py
(+51 files in other folders)
